tests/syntax/invalid/atom-camel-case.ama
# <input>:1:4 unexpected token: var(Example)
forExample()
